# unitree_autoware_docker

./: Dockerfile  LICENSE  README.md  cpu_run_autoware.sh  docker_pull.sh  nvidia_run_autoware.sh
autoware_dir/autoware_docker_ws/src/unitree_legged_sdk-3.4.2/: CMakeLists.txt
autoware_dir/autoware_docker_ws/src/unitree_ros_to_real-3.4.0/: README.md
autoware_dir/autoware_docker_ws/src/unitree_ros_to_real-3.4.0/unitree_legged_real/: CMakeLists.txt  ipconfig.sh
autoware_dir/autoware_docker_ws/src/unitree_ros_to_real-3.4.0/unitree_legged_real/launch/: key_filter_control.launch  real.launch
autoware_dir/autoware_docker_ws/src/unitree_ros_to_real-3.4.0/unitree_legged_real/src/exe/: climbing_unitree.cpp  filter.cpp  imu.cpp  read.cpp  safety.cpp  teleop_twist_keyboard.cpp  test_unitree.cpp  unitree_control.cpp
autoware_dir/data/tf/: tf.launch
autoware_dir/data/way_pints/: Hosei_Koganei_Noth_building_3F_Infinit_roop.csv  test.csv
autoware_dir/launch_sh/: .control1.sh.swp  read_cmd.sh  runtime_manager.sh  terminal.sh
autoware_dir/launch_sh/auto_pilot/: autoware_control.sh  climb.sh  imu.sh  safety.sh  unitree_LCM.sh
autoware_dir/launch_sh/manual_control/: filter_control.sh  imu.sh  keybord_control.sh  manual_control.sh  unitree_LCM.sh
text/: chamusuke.txt  nakamura.txt  text.txt
